[workspace]
members = [
    "rustecal",
    "rustecal-sys",
    "rustecal-types-bytes",
    "rustecal-types-protobuf",
    "rustecal-types-string",
    "rustecal-samples/pubsub/hello_send",
    "rustecal-samples/pubsub/hello_receive",
    "rustecal-samples/pubsub/person_send",
    "rustecal-samples/pubsub/person_receive"]
