[package]
name = "rustecal-core"
version = "0.1.2"
authors = ["Rex Schilasky"]
edition = "2021"
description = "Core API for Eclipse eCAL"
license = "Apache-2.0"
repository = "https://github.com/eclipse-ecal/rustecal"
documentation = "https://docs.rs/rustecal-core"
readme = "README.md"
keywords = ["ecal", "ipc", "pubsub", "server-client", "middleware"]
categories = ["network-programming", "api-bindings"]

[dependencies]
rustecal-sys = { version = "0.1.0", path = "../rustecal-sys", optional = true }
once_cell     = "1.17"
thiserror     = "1.0"
bitflags      = "1.3"

[features]
# Include sys bindings by default in local builds
default = ["sys"]
# Optional feature to enable the rustecal-sys dependency
sys     = ["rustecal-sys"]

[package.metadata.docs.rs]
default-features = false
features = []
