[package]
name = "rustecal-pubsub"
version = "0.1.3"
authors = ["Rex Schilasky"]
edition = "2021"
description = "Publish/Subscribe API for Eclipse eCAL"
license = "Apache-2.0"
repository = "https://github.com/eclipse-ecal/rustecal"
documentation = "https://docs.rs/rustecal-pubsub"
readme = "README.md"
keywords = ["ecal", "ipc", "pubsub", "middleware"]
categories = ["network-programming", "api-bindings"]

[dependencies]
rustecal-sys  = { version = "0.1.0", path = "../rustecal-sys", optional = true }
rustecal-core = { version = "0.1.0", path = "../rustecal-core" }
thiserror     = "1.0"

[features]
# Include sys bindings by default in local builds
default = ["sys"]
# Optional feature to enable the rustecal-sys dependency
sys     = ["rustecal-sys"]

[package.metadata.docs.rs]
default-features = false
features = []
