[package]
name = "rustecal-service"
version = "0.1.0"
edition = "2021"

[dependencies]
rustecal-sys = { path = "../rustecal-sys" }
rustecal-core = { path = "../rustecal-core" }
thiserror     = "1.0"
tokio         = { version = "1", optional = true }

[features]
default = ["async"]
async   = ["tokio"]
sync    = []
