[package]
name = "rustecal-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Raw FFI bindings to Eclipse eCAL C API"
license = "Apache-2.0"

[build-dependencies]
bindgen = "0.69"

[dependencies]
libc = "0.2"

[features]
default = ["dynamic"]
dynamic = []     # Link dynamically to libecal_c
static = []      # Optional: Static linking (if you add support)

[package.metadata.docs.rs]
features = ["dynamic"]
