[package]
name = "rustecal-sys"
version = "0.1.0"
authors = ["Rex Schilasky"]
edition = "2021"
build = "build.rs"
description = "Raw FFI bindings to Eclipse eCAL C API"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/eclipse-ecal/rustecal"
homepage = "https://github.com/eclipse-ecal/rustecal"
documentation = "https://docs.rs/rustecal-sys"
readme = "README.md"
keywords = ["ecal", "ipc", "pubsub", "server-client", "middleware"]
categories = ["network-programming", "api-bindings"]

[build-dependencies]
bindgen = "0.71.0"

[dependencies]
libc = "0.2"

[features]
default = ["dynamic"]
dynamic = []     # Link dynamically to libecal_c
static = []      # Optional: Static linking (if you add support)

[package.metadata.docs.rs]
features = ["dynamic"]
