[package]
name          = "rustecal-types-serde"
version       = "0.1.0"
edition       = "2021"
description   = "JSON/CBOR/MessagePack type support for rustecal TypedPublisher/TypedSubscriber"
license       = "Apache-2.0"
repository    = "https://github.com/eclipse-ecal/rustecal"
documentation = "https://docs.rs/rustecal-types-serde"
readme        = "README.md"
keywords      = ["ecal", "ipc", "pubsub", "message-support", "middleware"]
categories    = ["network-programming", "api-bindings"]

[dependencies]
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
serde_cbor      = "0.11"
rmp-serde       = "1.3"
rustecal-core   = { version = "0.1", path = "../rustecal-core" }
rustecal-pubsub = { version = "0.1", path = "../rustecal-pubsub" }
