[package]
name    = "rustecal"
version = "0.1.0"
edition = "2021"

[dependencies]
rustecal-core   = { path = "../rustecal-core" }
rustecal-pubsub = { path = "../rustecal-pubsub", optional = true }
rustecal-service= { path = "../rustecal-service", optional = true }

[features]
default = ["pubsub", "service"]
pubsub  = ["rustecal-pubsub"]
service = ["rustecal-service"]
