[package]
name          = "rustecal"
version       = "0.1.2"
edition       = "2021"
description   = "Meta-crate for rustecal: re-exports core, pubsub and service APIs"
license       = "Apache-2.0"
repository    = "https://github.com/eclipse-ecal/rustecal"
documentation = "https://docs.rs/rustecal"
readme        = "README.md"
keywords      = ["ecal", "ipc", "pubsub", "rpc", "middleware"]
categories    = ["network-programming", "api-bindings"]

[dependencies]
rustecal-core    = { version = "0.1", path = "../rustecal-core" }
rustecal-pubsub  = { version = "0.1", path = "../rustecal-pubsub", optional = true }
rustecal-service = { version = "0.1", path = "../rustecal-service", optional = true }

[features]
default = ["pubsub", "service"]
pubsub  = ["rustecal-pubsub"]
service = ["rustecal-service"]
